--- a/index.html
+++ b/index.html
@@ -8,49 +8,54 @@
     <title>Challeger Gym</title>
 </head>
 <body>
-	<header class="navBack">
-		<div id="top">
-			<img class="logo" src="Imagenes/logooriginal.jpg" alt="logo sitio" width="100px"></div>	
-		<nav>
-			<ul class="menu">
-			    <li class="item"><a href="index.html">Inicio</a></li>
-			    <li class="item"><a href="sedes.html">Sedes</a></li>
-                    <ul class="submenu">
-			            <li class="sub_i"><a href="servicios.html">Personalizados</a></li>
-			            <li class="sub_i"><a href="servicios.html">Pilates</a></li>
-                        <li class="sub_i"><a href="servicios.html">Circuitos</a></li>
-                    </ul>
-                <li class="item"><a href="servicios.html">Servicios</a>
-			        <ul class="submenu">
-			            <li class="sub_i"><a href="servicios.html">Personalizados</a></li>
-			            <li class="sub_i"><a href="servicios.html">Pilates</a></li>
-						<li class="sub_i"><a href="servicios.html">Circuitos</a></li>
-			        </ul>
-			    </li>
-			    <li class="item"><a href="quienessomos.html">¿Quienes somos?</a></li>
-			</ul> 
-		</nav>
-	</header>
-	<section class="section1">
-		<h3>
-			Challenger Gym
-		</h3>
-		<h2>
-			Tu mejor opción para una vida saludable!!
-		</h2>
-	</section>
-	<section class="section2">
-		<div class="Grupo">
-			<img src="Imagenes/Grupo.jpg" alt="Grupo">
-		</div>
-		
-	</section>
-	<footer>
-		<h5>Dirrecion: calle 9 15-35 763042 Buga, Colombia </h5>
-        <h5>Telefono: 34332454356 </h5>
-		<a href="#top">
-			<h5>Ir al Top</h5>
-		</a>
-	</footer>
+	<div class="padre">
+		<header class="header">
+			<div class="top">
+				<img src="imagenes/logooriginal.jpg" alt="logo">
+			</div>	
+			<h3>
+				Challenger Gym
+			</h3>
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html">Inicio</a>
+					</li>
+					<li>
+						<a href="pages/sedes.html">Sedes</a>
+					</li>
+					<li>
+						<a href="pages/servicios.html">Servicios</a>
+						<ul>
+							<li><a href="pages/servicios.html">Personalizados</a></li>
+							<li><a href="pages/servicios.html">Pilates</a></li>
+							<li><a href="pages/servicios.html">Circuitos</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="pages/quienessomos.html">¿Quienes somos?</a>
+					</li>
+				</ul> 
+			</nav>						
+		</header>					
+		<main class="main">
+			<h3>
+				Challenger Gym
+			</h3>
+			<h2>
+				Tu mejor opción para una vida saludable!!
+			</h2>
+			<div class="imagenMain">
+				<img src="imagenes/Grupo.jpg" alt="Grupo">
+			</div>			
+		</main>
+		<footer class="footer">
+			<h5>Dirrecion: calle 9 15-35 763042 Buga, Colombia </h5>
+			<h5>Telefono: 34332454356 </h5>
+			<a href="#top">
+				<h5>Ir al Top</h5>
+			</a>			
+		</footer>
+	</div>	
 </body>
 </html>
